...
  @override
  State<HabitsScreen> createState() => _HabitsScreenState();
}

class _HabitsScreenState extends State<HabitsScreen> {
  final habits = [
    'Exercise',
    'Meditation',
    'Read',
    'Study',
    'Journaling',
  ];

...
